# softer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bubble_sort.py  primality.py
src/softer/: dowhile.py  ifelse.py  softboxcar.py  softstep.py
src/softer/arithmetic/: softabs.py  softceil.py  softdivides.py  softfloor.py  softmax.py  softmin.py  softmod.py  softround.py  softsgn.py
src/softer/comparison/: softeq.py  softgt.py  softlt.py
src/softer/control/: ifelse.py
src/softer/data_structures/: softarray.py
src/softer/logic/: softand.py  softnot.py  softor.py  softxor.py
src/softer/ml/activation/: softsparsify
tests/: test.py
